# rustserver

./: Cargo.toml  index.html  index.jsx  package-lock.json  package.json  webpack.config.js
jsx/: home.js  index.js  test.js
jsx/components/: component.js  test.js
public/: 404.html  bundle.js  compiledhome.js  home.html  index.html  index.js  test.js
src/: main.rs  resolver.rs
style/: style.css
style/compiled/: output.css
